<resources>
    <string name="empty_string"> </string>
    <string name="app_name">Wanderly</string>
    <string name="client_id">553734931935-0lkhj9jq884etdd3vihgje7aguekql33.apps.googleusercontent.com</string>
    <string name="log_in_with_email">Log In with Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="log_in">Log In</string>
    <string name="create_new_account">Create new account</string>
    <string name="send_code">Send Code</string>
    <string name="please_enter_your_registered_email_id"><b>Please enter your registered email ID.</b></string>
    <string name="settings"><b>Settings</b></string>
    <string name="privacy_security"><b><![CDATA[Privacy & Security]]></b></string>
    <string name="notification"><b>Notification</b></string>
    <string name="change_password"><u>Change password</u></string>
    <string name="edit_profile"><b>Edit Profile</b></string>
    <string name="click_to_change_profile_picture"><u>Click to change profile picture</u></string>
    <string name="upcoming_trips"><b>Upcoming Trips</b></string>

    <string name="saved"><b>Saved</b></string>
    <string name="notifications"><b>Notifications</b></string>

    <!-- Home page -->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="day_after">In 2 days</string>
    <string name="next_week">Next Week</string>
    <string name="details_none">You have no plans!</string>

    <!-- No trips -->
    <string name="trip_none">You do not have any trips.</string>
    <string name="title_activity_maps2">MapsActivity2</string>

</resources>